--- a/app/src/main/res/layout/activity_insert_and_view.xml
+++ b/app/src/main/res/layout/activity_insert_and_view.xml
@@ -65,7 +65,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Button"
+        android:onClick="actionSubmitNote"
+        android:text="submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
